# RustRiff

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  stryker.config.json  tsconfig.node.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs
src-tauri/src/commands/: analyzer.rs  channels.rs  default_controls.rs  effects.rs  helpers.rs  latency_testing.rs  loopback.rs  midi.rs  mod.rs  settings.rs  tuner.rs
src-tauri/src/commands/effect_commands/: cabinet_ir.rs  delay.rs  effects.rs  hc_distortion.rs  mod.rs  sc_distortion.rs  wah.rs
src-tauri/src/domain/: channel.rs  channel_dto.rs  channel_manager.rs  effect.rs  effect_dto.rs  execution_timing_dto.rs  midi_target_parameter.rs  mod.rs  tone_stack.rs  validation.rs
src-tauri/src/domain/dto/: algorithmic_latency_dto.rs  amp_config_dto.rs  audio_device_dto.rs  audio_settings_dto.rs  buffer_latency_dto.rs  channel_dto.rs  execution_timing_dto.rs  midi_device_dto.rs  midi_mapping_dto.rs  mod.rs  pitch_snapshot_dto.rs  round_trip_latency_dto.rs  tone_stack_dto.rs  tuner_contract_dto.rs
src-tauri/src/infrastructure/: audio_handler.rs  midi_handler.rs  midi_parser.rs  mod.rs
src-tauri/src/infrastructure/file_loader/: file_loader.rs  file_loader_trait.rs  mod.rs
src-tauri/src/infrastructure/persistence/: amp_config_persistence_trait.rs  json_amp_config_repository.rs  mod.rs
src-tauri/src/services/: amp_config_service.rs  audio_latency_measurement_service.rs  audio_service.rs  device_service.rs  effect_parameter_bus.rs  file_service.rs  midi_service.rs  mod.rs  round_trip_latency_session.rs  tuner_service.rs
src-tauri/src/services/analyzers/: LatencyAnalyzer.rs  mod.rs  spectrum_analyzer_service.rs  spectrum_tap.rs
src-tauri/src/services/effects/: flip_effect.rs  mod.rs
src-tauri/src/services/processors/: mod.rs
src-tauri/src/services/round_trip_latency_session/: constants.rs  measurement_state.rs  mod.rs  session.rs
src-tauri/src/tests/: audio_service_integration_tests.rs  latency_measurement_tests.rs  mock.rs  mod.rs
(+184 files in other folders)
